--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,14 @@ __pycache__/
 # C extensions
 *.so
 
-/data/*
+/data/test/images/*
+/data/test/labels/*
+/data/train/images/*
+/data/train/labels/*
+/data/valid/images/*
+/data/valid/labels/*
+!/data/*.yaml
+
 /all_data/
 
 # Distribution / packaging
